processed/jira/txt/LU/LU-18127.txt
Key:        LU-18127
Summary:    -Werror=array-bounds caused false failure in configure tests
Link:       https://jira.whamcloud.com/browse/LU-18127
Type:       Bug
Priority:   Minor
Status:     Resolved
Resolution: Fixed
Assignee:   Jian Yu
Reporter:   Jian Yu
Created:    Sat, 10 Aug 2024 06:41:12 +0000
Updated:    Fri, 23 Aug 2024 22:25:45 +0000
Resolved:   Fri, 23 Aug 2024 22:25:45 +0000

--- Description ---
While building Lustre codes with kernel 5.19.0-45-generic, I found some configure test results were incorrect because "-Werror=array-bounds" caused false failure in those tests. For example:

build/conftest.c: In function 'main':
build/conftest.c:228:39: error: array subscript 0 is outside array bounds of 'struct inode_operations[0]' [-Werror=array-bounds]
  228 |         ((struct inode_operations *)1)->get_acl((struct inode *)NULL, 0, false);
      |                                       ^~
cc1: all warnings being treated as errors

"-Warray-bounds" was enabled in kernel commit v5.17-rc3-1-ge6148767825c (Makefile: Enable -Warray-bounds), and was disabled in kernel commits:

	v5.19-rc1-28-gf0be87c42cbd (gcc-12: disable '-Warray-bounds' universally for now)

	v6.2-rc3-9-g5a41237ad1d4 (gcc: disable -Warray-bounds for gcc-11 too)

	v6.3-rc7-202-g0da6e5fd6c37 (gcc: disable '-Warray-bounds' for gcc-13 too)

--- Comment (pjones, Fri, 23 Aug 2024 22:25:45 +0000) ---
Merged for 2.16

--- Comment (gerrit, Fri, 23 Aug 2024 22:03:41 +0000) ---
"Oleg Drokin " merged in patch https://review.whamcloud.com/c/fs/lustre-release/+/55989/

Subject: LU-18127 autoconf: fix configure tests -Warray-bounds errors

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: a78894ee642d423a244fc0dcbc518c57a458a2db

--- Comment (gerrit, Sat, 10 Aug 2024 07:59:02 +0000) ---
"Jian Yu " uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/55989

Subject: LU-18127 autoconf: fix configure tests -Warray-bounds errors

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: ed39cc83b2b5bb06b97685de8845ce1038d893c8
